fixed registration page on mobile; fixed registration button styles

--- a/public/styles.css
+++ b/public/styles.css
@@ -1,8 +1,14 @@
+html {
+  font-size: 100%;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+}
 body {
   font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #606060;
-  font-size: 17px;
-  line-height: 1.3;
+  margin: 0;
+  font-size: 1em;
+  line-height: 1.4;
 }
 
 .icon {
@@ -136,18 +142,6 @@ audio, canvas, video {
 
 audio:not([controls]), [hidden] {
   display: none;
-}
-
-html {
-  font-size: 100%;
-  -webkit-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%;
-}
-
-body {
-  margin: 0;
-  font-size: 1em;
-  line-height: 1.4;
 }
 
 ::-moz-selection, ::selection {
@@ -562,7 +556,11 @@ header:after {
   border: 2px dashed transparent;
 }
 
-.reg:hover { color: white; }
+.reg:hover, .reg:focus {
+  color: #3e9df7;
+  text-decoration: none;
+  background-color: #fff;
+}
 
 .reg:after {
   /* Coming soon text */
